--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background: url('fundo.jpg') no-repeat center center fixed;
+  background: url('fundo.jpeg') no-repeat center center fixed;
   background-size: cover;
   overflow: hidden;
 }
@@ -126,7 +126,8 @@ setInterval(criarCoracao, 400);
 
     <h2>Dan, amor da minha vida,<br>aceitas ser a minha valentina? 💘</h2>
 
-    <button id="yes" onclick="aceitou()">Sim 💖</button>
+    <button onclick="tocarMusica()">Tocar música 🎵</button><br>
+<button id="yes" onclick="aceitou()">Sim 💖</button>
     <button id="no" onmouseover="fugir()">Não 😅</button>
   </div>
 
@@ -158,4 +159,5 @@ function aceitou() {
 </script>
 
 </body>
+
 </html>
