--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background: url('fundo.jpeg') no-repeat center center fixed;
+  background: url('./fundo.jpeg') no-repeat center center fixed;
   background-size: cover;
   overflow: hidden;
 }
@@ -161,3 +161,4 @@ function aceitou() {
 </body>
 
 </html>
+
