--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background: url('./fundo.jpeg') no-repeat center center fixed;
+  background-image: url("fundo.jpeg");
+  //background: url('./fundo.jpeg') no-repeat center center fixed;
   background-size: cover;
   overflow: hidden;
 }
@@ -161,4 +162,5 @@ function aceitou() {
 </body>
 
 </html>
+
 
